--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,65 @@ h1{
 }
 
 
+.progblock__title{
+    text-align: center;
+}
+
+.progblock{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.progblock__cart {
+    position: relative;
+    width: 350px;
+    height: 350px;
+    background-image: url('../img/dog-9478504_1280.jpg'); /* Подставь свой путь */
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 20px;
+
+}
 
 
+
+
+.progblock__cart::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 128, 0, 0.5); /* Цвет затемнения */
+}
+
+
+
+.progblock__cart_item {
+    position: relative;
+    z-index: 2;
+}
+
+p{
+    font-weight: normal;
+    font-size: 18px;
+}
+.progblock__first{
+    display: flex;
+    margin-bottom: 20px;
+
+}.progblock__second{
+    display: flex;
+}
 
 
 
@@ -91,6 +148,24 @@ h1{
         height: 100px;
 
     }
+    .header{
+        padding: 0 0 20px 0;
+        
+    }
+    .progblock__first{
+        display: flex;
+        margin-bottom: 20px;
+        flex-direction: column;
+    
+    }.progblock__second{
+        display: flex;
+        flex-direction: column;
+
+    }.progblock__cart{
+        width: 500px;
+        height: 700px;
+        margin: 10px;
+    }
 }
 
 /* Мобильные устройства (макс. 768px) */
@@ -103,7 +178,12 @@ h1{
         padding: 10px 10px 10px 10px;
         background-color: rgb(224, 224, 224);
     
+    }.progblock__cart{
+        width: 300px;
+        height: 300px;
+        margin: 10px;
     }
+    
 }
 
 /* Маленькие экраны (макс. 480px) */
